# stouch

./: .cproject  .gitignore  .project  AndroidManifest.xml  README.md  contributors.txt  detect-rect.py  fix_android_firmware.readme  fixusb.sh  obsolete_ways_to_fix_USB.txt  ueventd.rc
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/github/dmitryrybakov/stouch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: stouchDetector.cpp  stouchDetector.h  stouchEventInjector.cpp  stouchFreenect.cpp  stouchFreenect.h  stouchFreenect.hpp  stouchJNI.cpp  stouchJNI.h  stouchJNIEntry.cpp  stouchUtility.cpp  stouchUtility.h
app/src/main/cpp/TUIO/: TuioClient.cpp  TuioServer.cpp
app/src/main/cpp/libfreenect/: cameras.c  core.c  freenect_internal.h  libfreenect.hpp  usb_libusb10.h
app/src/main/cpp/libusb/: config.h  core.c
app/src/main/cpp/libusb/os/: linux_netlink.c
app/src/main/java/com/github/dmitryrybakov/stouch/: MainActivityFragment.java  STouchActivity.java  STouchService.java
app/src/main/java/com/github/rdv0011/stouch/: KinectPreview.java  MainActivityFragment.java  STouchActivity.java  STouchEventInjector.java  STouchService.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs_kinect_preview.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/github/dmitryrybakov/stouch/: ExampleUnitTest.java
docs/: hardware-upgrade-investigation.md
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  stouchDetector.cpp  stouchDetector.h  stouchEventInjector.cpp  stouchEventInjector.h  stouchFreenect.hpp  stouchJNI.cpp
jni/TUIO/: TuioServer.h
jni/libfreenect/: config.h  usb_libusb10.c
jni/libusb/: config.h
res/layout/: activity_main.xml
res/menu/: main.xml
res/values/: dimens.xml  strings.xml
src/com/example/stouch2/: STouchActivity.java  STouchService.java
